# coding-interview-prep-2024

./: README.md
algorithms-in-python/: arrays_search_algos.py  arrays_sort_algos.py
challenges-in-python/: implement-quicksort.py  pyproject.toml
challenges-in-python/arrays/: four-number-sum.py  three-number-sum.py  two-number-sum.py
challenges-in-python/backtracking/: n_queens.py  readme.md
challenges-in-python/binary-search-trees/: find-closest-value-in-bst.py
challenges-in-python/cyclic_sort/: missing_number.py  readme.md
challenges-in-python/dynamic_programming/: knapsack.py  readme.md
challenges-in-python/fast_and_slow_pointers/: README.md  happy_number.py
challenges-in-python/greedy_techniques/: jump_game_l.py  readme.md
challenges-in-python/inplace_linkedlist_reversal/: README.md  reverse_linkedlist.py
challenges-in-python/k_way_merge/: merge_sorted_array.py  readme.md
challenges-in-python/matrices/: readme.md  set_matrix_zeroes.py
challenges-in-python/merge_intervals/: README.md  merge_intervals.py
challenges-in-python/modified_binary_search/: binary_search.py  readme.md
challenges-in-python/sliding_window/: README.md  dna_squences.py
challenges-in-python/stacks/: basic_calculator.py  readme.md
challenges-in-python/subsets/: readme.md  subsets.py
challenges-in-python/top_k_element/: kth_largest_element.py  readme.md
challenges-in-python/topological_sort/: compilation_order.py  readme.md
challenges-in-python/two_heaps/: maximize_capital.py  readme.md
challenges-in-python/two_pointers/: palindrome.py
(+67 files in other folders)
