[tool.poetry]
name = "coding-challenges-python-2024"
version = "0.1.0"
description = "practicing-code-challenges"
authors = ["Tamer Alamiri <tameralamiri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
